<resources>
    <string name="app_name">PiHome</string>
    <string name="more">More</string>
    <string name="allow">Allow</string>
    <string name="ban">Do not show again</string>
    <string name="finish">Finish</string>
    <string name="it_is_ok">OK!</string>
    <string name="i_known">Roger!</string>
    <string name="app_is_running">Application is running.</string>
    <string name="none_data">No data</string>
    <string name="close">Close</string>
    <string name="no_data">No content found</string>
    <string name="error_code">Error Code</string>
    <string name="double_tap_to_exit">Press again to exit the key</string>
    <string name="cancel">Cancel</string>
    <string name="ok">YES</string>
    <string name="confirm">Confirm</string>
    <string name="to_setting">go setting</string>
    <string name="back">back</string>
    <string name="tips">tip</string>
    <string name="exit">exit</string>
    <string name="no_network">No network connection, please check your network</string>
    <string name="network_exception">Network Error</string>
    <string name="network_exception_tips">Please check your network connection and try again</string>
    <string name="network_error_tip">There seems to be something wrong with the network. Please check the network</string>
    <string name="mobile_network_tip">Using a mobile network</string>
    <string name="open_gpg_tip">GPS permission required, please allow access to location service</string>
    <string name="permissions_tips_01">In order to use this app normally, please</string>
    <string name="permission_contacts">Allow read and write contacts</string>
    <string name="permission_mic">Allow access to microphone</string>
    <string name="permission_read_phone_state">Allow access to phone information</string>
    <string name="permission_location">Allow access to location</string>
    <string name="permission_storage">Allow read and write files</string>
    <string name="permission_bluetooth">Allow access to Bluetooth</string>
    <string name="permission_phone_settings">Allow changing phone settings</string>
    <string name="permission_camera">Allow use camera</string>
    <string name="permissions_tips_02">Please open system settings and grant this app</string>
    <string name="permission">permission</string>
    <string name="scan_bt_location_permission">Searching for Bluetooth devices requires user permission to access location information.</string>
    <string name="scan_bt_gps_service">Searching for Bluetooth devices requires using your phone\'s location services.</string>
    <string name="connect_bt_permission">Searching or connecting to Bluetooth devices requires user permission to access nearby devices.</string>
    <string name="select_photo_storage_permission">The picture selection function requires the user to allow access to the phone storage.</string>
    <string name="select_photo_storage_permission_tips">Selecting the picture function requires access to the phone storage. Do you want to go to settings?</string>
    <string name="take_photo_camera_permission">The photo taking feature requires user permission to use the camera.</string>
    <string name="music_function_storage_permission">The local music function requires the user to allow access to the phone\'s music files.</string>
    <string name="search_device_location_permission">The Find Location feature requires user permission to access location information.</string>
    <string name="net_radio_location_permission">Internet radio requires user permission to access location information.</string>
    <string name="record_audio_permission">The translation function requires the user to allow the use of microphone recording function</string>
    <string name="read_phone_state_permission">The translation function requires the user to grant permission to access the phone\'s status.</string>
    <string name="first_connect_device">Please connect the device first</string>
    <string name="unconnected_device">No Device Connected</string>
    <string name="unconnected_device_tips">No device connected, please connect or add device first</string>
    <string name="connectable_devies">Devices for connect</string>
    <string name="disconnect_device">Disconnect the device</string>
    <string name="msg_read_file_err_reading">Device busy, please try again</string>
    <string name="msg_read_file_err_offline">Device offline</string>
    <string name="msg_call_tip">Calling in progress&#8230;</string>
    <string name="no_support_reverberation">Reverb is not support on current device</string>
    <string name="bt_connecting">Connecting</string>
    <string name="device_status_unconnected">Disconnected</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_using">Current in use</string>
    <string name="device_status_mandatory_upgrade">Update required</string>
    <string name="connect_device">Connect a device</string>
    <string name="connect_tip">Connection</string>
    <string name="device_connecting">Connecting&#8230;</string>
    <string name="bt_connect_failed">Failed to connect</string>
    <string name="device_status_reconnect">Reconnecting</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="user_agreement">User agreement</string>
    <string name="agree_with">I agree with</string>
    <string name="dialog_tips">Reminder</string>
    <string name="user_service_tips">\t\tWelcome to use %1$s APP.When you use it, you need to connect to the data network or WLAN operator. Please consult the local operator for the traffic cost.We attach great importance to your privacy protection and personal information protection.</string>
    <string name="user_service_tips2">Please read “User agreement” and “Privacy policy” carefully before you use %1$s APP. You can use our service after you agree and accept all the terms.</string>
    <string name="privacy_policy_name">“Privacy policy”</string>
    <string name="user_service_name">“User agreement”</string>
    <string name="and">and</string>
    <string name="agree_and_use">Agree and continue</string>
    <string name="not_agree_and_exit">Disagree and exit</string>
    <string name="tab_multimedia">Media</string>
    <string name="tab_eq">Equalizer</string>
    <string name="tab_device">Devices</string>
    <string name="switch_classic_device_tips">The current audio source output device [%1$s] is inconsistent with the device [%2$s] in use. Please switch the output  [%3$s] to ensure the user experience</string>
    <string name="add_device">Add New Deivce</string>
    <string name="my_devices">My Devices</string>
    <string name="pack_up">Less Info</string>
    <string name="device_connecting_tips">Connecting, please wait&#8230;</string>
    <string name="bluetooth_not_enable">Bluetooth is OFF</string>
    <string name="connect_device_over_limit">Reach maximum Bluetooth devices, please disconnect unwanted devices at system setting</string>
    <string name="background_show_activity_failed_tips">BBackground activity (pop-up window) permission denied, please grant permission</string>
    <string name="switch_device_tips">CDevice switch successful.</string>
    <string name="device_not_using">This device is currently not in use</string>
    <string name="device_charging_bin">%1$sCharging case</string>
    <string name="connect_history_failed_tips">Device not found:[%1$s]</string>
    <string name="multi_media_local">Local Media</string>
    <string name="multi_media_usb_drive">USB Drive</string>
    <string name="multi_media_sd_card">SD Card</string>
    <string name="multi_media_fm_launch">FM Transmitter</string>
    <string name="multi_media_fm_receive">FM Receiver</string>
    <string name="multi_media_line_in">AUX</string>
    <string name="multi_media_light_settings">Light Effects</string>
    <string name="multi_media_alarm">Alarm</string>
    <string name="multi_media_search_device">Find My Devices</string>
    <string name="multi_media_net_radio">Online Radio</string>
    <string name="multi_media_sound_card">Karaoke</string>
    <string name="multi_media_spdif">SPDIF</string>
    <string name="multi_media_pc_slave">PC Slave</string>
    <string name="none_music_data">No music file found, please add music</string>
    <string name="song_list_top_all_song">All Music</string>
    <string name="song_list_top_song_num">(Total %1$d Songs)</string>
    <string name="current_version">Current version</string>
    <string name="local_music_none">No local music file found</string>
    <string name="back_to_root">Now in root directory</string>
    <string name="device_music">Music in device</string>
    <string name="switch_mode_success">Switched to %1$s Mode </string>
    <string name="msg_read_file_err_beyond_max_depth">Beyond readable depth</string>
    <string name="sd_card">SD Card</string>
    <string name="udisk">USB Drive</string>
    <string name="none_id3_music_data">Fail to obtain ID3 information</string>
    <string name="other_music_player">(from other music player app)</string>
    <string name="hdmi">HDMI</string>
    <string name="optical_fiber">Optical</string>
    <string name="coaxial">Coaxial</string>
    <string name="search_forward">search forward</string>
    <string name="search_all">search all</string>
    <string name="search_backward">search backward</string>
    <string name="freq_point_collect">Save channel</string>
    <string name="freq_point_manage">Manage channel</string>
    <string name="net_radio">Online Radio</string>
    <string name="freq_point_collect_success">Channel Saved</string>
    <string name="freq_point_collect_existed">Saved</string>
    <string name="freq_point">Frequency</string>
    <string name="searching">Searching for channels&#8230;</string>
    <string name="fm_value_no_change">FM Frequency unchanged</string>
    <string name="fm_range">Frequency range 87.5~108.0MHz</string>
    <string name="fm_only_one_decimal">Frequency is accurate to one decimal place</string>
    <string name="fm_no_decimal">Null on decimal place</string>
    <string name="setting">Setting</string>
    <string name="named">Name</string>
    <string name="device_name_over_limit">Device name too long, limit is %1$d characters</string>
    <string name="adaptive_anc">Adaptive ANC</string>
    <string name="adaptive_anc_desc">Turn on the ANC adaptive algorithm to compensate for differences in ear canal and wearing, and improve noise reduction performance</string>
    <string name="scene_denoising">Scene Noise Reduction</string>
    <string name="scene_denoising_auto">Auto</string>
    <string name="wind_noise_detection">Wind Noise Detection</string>
    <string name="wind_noise_detection_tips">Under high wind noise, reduce the impact of wind noise on ANC.</string>
    <string name="alarm_bell_time">Alarm duration</string>
    <string name="bell_repeat_count_title">Repeat time</string>
    <string name="bell_interal_time_title">Repeat interval(min）</string>
    <string name="show_dialog_rssi_tips">Pop-up window sensitivity:</string>
    <string name="rssi_unit">dBm</string>
    <string name="input_rssi_hint">Please input desired RSSI value [-100~0]dBm</string>
    <string name="i_know_it_2">I know it</string>
    <string name="about_call_translation">About Call Translation</string>
    <string name="call_translation_introduction">During a call, both parties will hear the translated language. The left earphone will play the other party\'s original voice, and the right earphone will serve as a translation assistant and play the translated language. Please wear both earphones at the same time.</string>
    <string name="translated_voice">Translated Voice</string>
    <string name="translation_assistant">Translation Assistant</string>
    <string name="original_sound">Original Sound</string>
    <string name="other_person_voice">Other person\'s voice</string>
</resources>