<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_user_service_shape"
    android:padding="26dp">

    <TextView
        android:id="@+id/tv_user_service_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_tips"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_18sp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="22dp"/>

    <TextView
        android:id="@+id/tv_user_service_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_user_service_title"
        android:text="@string/user_service_tips"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        android:lineSpacingExtra="5dp"/>

    <TextView
        android:id="@+id/tv_user_service_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/tv_user_service_content"
        android:background="@drawable/bg_btn_purple_selector"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="9dp"
        android:text="@string/agree_and_use"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/white_ffffff"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/tv_user_service_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_service_agree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/not_agree_and_exit"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/gray_575757"/>

</RelativeLayout>