<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_rssi_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:text="@string/show_dialog_rssi_tips"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_rssi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_rssi_hint"
        android:inputType="number"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:maxLength="4"
        android:layout_marginEnd="4dp"
        android:textColor="@color/blue_text_color"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_rssi_tips"
        app:layout_constraintEnd_toStartOf="@+id/tv_rssi_unit"
        app:layout_constraintTop_toBottomOf="@+id/tv_rssi_tips"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_rssi_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/rssi_unit"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_rssi"
        app:layout_constraintStart_toEndOf="@+id/et_rssi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_rssi" />

</androidx.constraintlayout.widget.ConstraintLayout>