<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_eq_shape"

    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/tv_bell_interval_chose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/alarm_bell_time"
        android:textColor="@color/black_242424"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView

        android:id="@+id/tv_bell_interval_time_chose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:visibility="visible"
        android:paddingBottom="12dp"
        android:text="@string/bell_interal_time_title"
        android:textColor="@color/black_464646"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bell_interval_chose_title" />

    <com.jieli.btsmart.ui.alarm.NumSeekBar
        android:id="@+id/num_sb_interval_time"
        android:layout_width="0dp"
        android:visibility="visible"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bell_interval_time_chose_title" />


    <TextView
        android:id="@+id/tv_bell_interval_count_chose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_goneMarginTop="0dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:visibility="gone"
        android:text="@string/bell_repeat_count_title"
        android:textColor="@color/black_464646"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_sb_interval_time" />

    <com.jieli.btsmart.ui.alarm.NumSeekBar
        android:id="@+id/num_sb_interval_count"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bell_interval_count_chose_title" />

    <View
        android:id="@+id/line_bell_interval_chose_h"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="32dp"
        android:background="@color/gray_light_F7FAFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_sb_interval_count" />

    <View
        android:id="@+id/line_bell_interval_chose_v"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@color/gray_light_F7FAFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_bell_interval_chose_h" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blue_448eff"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toStartOf="@id/line_bell_interval_chose_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_bell_interval_chose_h" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/blue_448eff"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_bell_interval_chose_v"
        app:layout_constraintTop_toBottomOf="@id/line_bell_interval_chose_h" />

</androidx.constraintlayout.widget.ConstraintLayout>